# adaka

./: .gitignore  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vitest.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
dev/: router.php
docs/: FOUNDATION.md  LIMITS.md  M1-API-CLIENT.md  RELEASING.md  V02-REDESIGN.md
docs/adr/: 0001-stack-tauri-rust-react.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: env.rs  events.rs  mod.rs  prefs.rs  requests.rs  workspace.rs
src-tauri/src/modules/api_client/: format.rs  history.rs  import.rs  inheritance.rs  mod.rs  send.rs  tree.rs
src-tauri/tests/: send_integration.rs  torture_filesystem.rs  torture_hostile_input.rs  torture_runtime.rs  torture_scale.rs
src/app/: App.tsx  CommandPalette.tsx  ConfirmPanel.tsx  ContextPanel.tsx  MainPane.tsx  ModuleRail.tsx  SettingsRoute.tsx  ShortcutOverlay.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  TitleBar.tsx  Toasts.test.ts  Toasts.tsx  WelcomeScreen.tsx  WorkspaceHome.tsx  WorkspaceTabStrip.tsx  global-store.ts  icons.tsx  module-context.ts  palette-scoping.test.ts  settings-store.test.ts  settings-store.ts  store.test.ts  store.ts  tab-dirty.test.ts  tab-dirty.ts  workspace-actions.ts  workspace-name.test.ts  workspace-tab-context.tsx  workspace-tabs-store.test.ts  workspace-tabs-store.ts
src/modules/api-client/: ApiClientRoute.tsx  curl.test.ts  curl.ts  guardEnvEditor.test.ts  index.ts  index.tsx  store.test.ts  store.ts  types.ts  utils.test.ts  utils.ts
src/modules/utilities/: Base64Tool.tsx  HashTool.tsx  JsonTool.tsx  JwtTool.tsx  TimestampTool.tsx  ToolLayout.tsx  (+6 more)
src/shared/: Toggle.tsx  Tooltip.tsx  events.ts  formatError.test.ts  formatError.ts  prefs.ts  recents.test.ts  recents.ts  shortcuts.test.ts  shortcuts.ts  useShortcut.ts
tests/torture/: curl-hostile.test.ts  generate-postman-fixture.ts  workspace-tab-leak.test.ts
(+31 files in other folders)
