[package]
name = "adaka"
version = "0.0.0"
edition = "2021"
description = "Local-first developer workspace"
license = "MIT"

[lib]
name = "adaka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
