[package]
name = "adaka"
version = "0.0.0"
edition = "2021"
description = "Local-first developer workspace"
license = "MIT"

[lib]
name = "adaka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml_edit = { version = "0.22", features = ["serde"] }
rand = "0.9"
thiserror = "2"
tauri-plugin-dialog = "2.7.1"

[dev-dependencies]
tempfile = "3"
